; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/8250/extr_8250_port.c_serial8250_get_divisor.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/8250/extr_8250_port.c_serial8250_get_divisor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { {}* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uart_port*, i32, i32*)* @serial8250_get_divisor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @serial8250_get_divisor(%struct.uart_port* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.uart_port*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.uart_port* %0, %struct.uart_port** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load %struct.uart_port*, %struct.uart_port** %5, align 8
  %9 = getelementptr inbounds %struct.uart_port, %struct.uart_port* %8, i32 0, i32 0
  %10 = bitcast {}** %9 to i32 (%struct.uart_port*, i32, i32*)**
  %11 = load i32 (%struct.uart_port*, i32, i32*)*, i32 (%struct.uart_port*, i32, i32*)** %10, align 8
  %12 = icmp ne i32 (%struct.uart_port*, i32, i32*)* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %3
  %14 = load %struct.uart_port*, %struct.uart_port** %5, align 8
  %15 = getelementptr inbounds %struct.uart_port, %struct.uart_port* %14, i32 0, i32 0
  %16 = bitcast {}** %15 to i32 (%struct.uart_port*, i32, i32*)**
  %17 = load i32 (%struct.uart_port*, i32, i32*)*, i32 (%struct.uart_port*, i32, i32*)** %16, align 8
  %18 = load %struct.uart_port*, %struct.uart_port** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 %17(%struct.uart_port* %18, i32 %19, i32* %20)
  store i32 %21, i32* %4, align 4
  br label %27

22:                                               ; preds = %3
  %23 = load %struct.uart_port*, %struct.uart_port** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @serial8250_do_get_divisor(%struct.uart_port* %23, i32 %24, i32* %25)
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %22, %13
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @serial8250_do_get_divisor(%struct.uart_port*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
